claim-submission and other features

--- a/cso-ui/src/app/app.html
+++ b/cso-ui/src/app/app.html
@@ -1,1 +1,17 @@
+<!-- Logo Section -->
+<div class="logo-container">
+  <div class="logo-left">
+    <img 
+      src="assets/images/policygo.png" 
+      alt="Insurance Logo" 
+      class="logo" 
+    />
+    
+  </div>
+  <div class="date-time">
+    {{ currentDateTime }}
+  </div>
+</div>
+
+<!-- Routes render here -->
 <router-outlet></router-outlet>
