--- a/cso-ui/src/app/component/create-policy/create-policy.html
+++ b/cso-ui/src/app/component/create-policy/create-policy.html
@@ -1,3 +1,4 @@
+
 <div class="policy-container">
   <mat-card class="form-card">
     <mat-card-header>
@@ -28,7 +29,7 @@
             <mat-select formControlName="type">
               <mat-option value="Health">Health</mat-option>
               <mat-option value="Life">Life</mat-option>
-              <mat-option value="Car">Car</mat-option>
+              <mat-option value="Motor">Motor</mat-option>
               <mat-option value="Travel">Travel</mat-option>
             </mat-select>
           </mat-form-field>
@@ -47,7 +48,7 @@
           </mat-form-field>
 
           <mat-form-field appearance="outline" class="form-field">
-            <mat-label>Term (Years)</mat-label>
+            <mat-label>Term (Months)</mat-label>
             <input matInput type="number" formControlName="term" />
           </mat-form-field>
         </div>
