claim-submission-feature

--- a/cso-ui/src/app/component/claim-submission-component/claim-submission-component.html
+++ b/cso-ui/src/app/component/claim-submission-component/claim-submission-component.html
@@ -108,6 +108,9 @@
                 <input matInput type="date" formControlName="dateOfDeath">
             </mat-form-field>
         </div>
+       <!-- <input type="file" id="fileInput" (change)="onFileSelected($event)" /> -->
+
+<input type="file"   (change)="onFilesSelected($event)" multiple>
 
         <button mat-raised-button  color="primary" type="submit">Submit Claim</button>
         
