--- a/cso-ui/src/app/component/dashboard/dashboard.html
+++ b/cso-ui/src/app/component/dashboard/dashboard.html
@@ -13,7 +13,7 @@
     </mat-card-header>
     <mat-divider></mat-divider>
     <mat-card-content>
-      <p><strong>Name:</strong> {{ LoggedinUser?.name }}</p>
+      <p><strong>Name:</strong> {{ LoggedinUser?.Name }}</p>
       <p><strong>Email:</strong> {{ LoggedinUser?.email }}</p>
       <p><strong>Phone:</strong> {{ LoggedinUser?.phoneNumber }}</p>
       <p><strong>Policy Status:</strong> 
