--- a/cso-ui/src/app/component/dashboard/dashboard.html
+++ b/cso-ui/src/app/component/dashboard/dashboard.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" class="dashboard-toolbar">
   <span>Policy Dashboard</span>
   <span class="spacer"></span>
-  <span class="user-welcome">Welcome, {{ LoggedinUser?.name }}</span>
+  <span class="user-welcome">Welcome, {{ LoggedinUser?.Name }}</span>
 </mat-toolbar>
 
 <div class="dashboard-container">
